Add complete  hero element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,33 @@
         <link rel="stylesheet" href="vendor/bootstrap-grid.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    
+    <body>
+        
+        <div class="hero">
+            <div class="background"></div>
+            <div class="hero-content">
+                <h2>Welcome To Our Store</h2>
+                <h1>IT'S NICE TO MEET YOU</h1>
+                <button class="hero-btn">TELL ME MORE</button>
+            </div>
+        </div>
 
+        <nav>
+            <div class="container">
+                <div class="nav-left">
+                    <h2>Golden Ski</h2>
+                </div>
+                <div class="nav-right">
+                    <ul class="main-menu">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">SERVICES</a></li>
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>   
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>    
 
-
+    </body>
 </html>
