Add complete Services section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="uft-8">
         <title>Simple shop</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/f80f2e37e7.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://use.typekit.net/flu0fug.css">
         <link rel="stylesheet" href="vendor/bootstrap-grid.css">
         <link rel="stylesheet" href="css/style.css">
@@ -35,6 +36,39 @@
                 </div>
             </div>
         </nav>    
+
+        <section class="services-section">
+            <div class="container">
+                <h1>SERVICES</h1>
+                <h2>Excepteur sint occaecat cupidatat non</h2>
+                <div class="row services-boxes">
+                    <div class="box-1 col-4">
+                        <i class="fa-solid fa-person-skiing"></i>
+                        <h3>Skiing Shop</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                    <div class="box-2 col-4">
+                        <i class="fa-solid fa-person-skiing-nordic"></i>
+                        <h3>Nordic Skiing</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                    <div class="box-3 col-4">
+                        <i class="fa-solid fa-person-snowboarding"></i>
+                        <h3>Snowboard</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="shop-section">
+            <div class="container">
+                <h1>SHOP</h1>
+                <h2>Excepteur sint occaecat cupidatat non</h2>
+
+
+            </div>
+        </section>
 
     </body>
 </html>
