Add Shop section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,39 @@
             <div class="container">
                 <h1>SHOP</h1>
                 <h2>Excepteur sint occaecat cupidatat non</h2>
+                <div clas="row">
+                    <div class="card col-4">
+                        <img src="">
+                        <h3>Snowboard</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                    <div class="col-4">
+                        <img src="">
+                        <h3>Snowboard</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                    <div class="col-4">
+                        <img src="">
+                        <h3>Snowboard</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                    <div class="col-4">
+                        <img src="">
+                        <h3>Snowboard</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                    <div class="col-4">
+                        <img src="">
+                        <h3>Snowboard</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+                    <div class="col-4">
+                        <img src="">
+                        <h3>Snowboard</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    </div>
+
+                </div>
 
 
             </div>
