Add Shop section styling

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                 <h1>SERVICES</h1>
                 <h2>Excepteur sint occaecat cupidatat non</h2>
                 <div class="row services-boxes">
-                    <div class="box-1 col-4">
+                    <div class="box-1 col-md-4">
                         <i class="fa-solid fa-person-skiing"></i>
                         <h3>Skiing Shop</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
                     </div>
-                    <div class="box-2 col-4">
+                    <div class="box-2 col-md-4">
                         <i class="fa-solid fa-person-skiing-nordic"></i>
                         <h3>Nordic Skiing</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
                     </div>
-                    <div class="box-3 col-4">
+                    <div class="box-3 col-md-4">
                         <i class="fa-solid fa-person-snowboarding"></i>
                         <h3>Snowboard</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
@@ -64,44 +64,66 @@
         <section class="shop-section">
             <div class="container">
                 <h1>SHOP</h1>
-                <h2>Excepteur sint occaecat cupidatat non</h2>
-                <div clas="row">
-                    <div class="card col-4">
-                        <img src="">
-                        <h3>Snowboard</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                <h2>Choose category</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="#">
+                            <img src="https://images.unsplash.com/photo-1486684338211-1a7ced564b0d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Ski">
+                            <h3>Ski</h3>
+                            <p>Proin iaculis</p> 
+                        </a> 
                     </div>
-                    <div class="col-4">
-                        <img src="">
-                        <h3>Snowboard</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    <div class="col-md-4">
+                        <a href="#">
+                            <img src="https://images.unsplash.com/photo-1625154869776-100eba31abbb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=891&q=80" alt="Snowboard">
+                            <h3>Snowboard</h3>
+                            <p>Proin iaculis</p> 
+                        </a> 
                     </div>
-                    <div class="col-4">
-                        <img src="">
-                        <h3>Snowboard</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    <div class="col-md-4">
+                        <a href="#">
+                            <img src="https://images.unsplash.com/photo-1614358536373-1ce27819009e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" alt="Equipment">
+                            <h3>Equipment</h3>
+                            <p>Proin iaculis</p>
+                        </a>  
                     </div>
-                    <div class="col-4">
-                        <img src="">
-                        <h3>Snowboard</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    <div class="col-md-4">
+                        <a href="#">
+                            <img src="https://images.unsplash.com/photo-1614270262860-f20d4c6ab4f9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80" alt="Clothes">
+                            <h3>Clothes</h3>
+                            <p>Proin iaculis </p>  
+                        </a>
                     </div>
-                    <div class="col-4">
-                        <img src="">
-                        <h3>Snowboard</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    <div class="col-md-4">
+                        <a href="#">
+                            <img src="https://images.unsplash.com/photo-1622484446431-e4592de4a7ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Gadgets">
+                            <h3>Gadgets</h3>
+                            <p>Proin iaculis</p>  
+                        </a>
                     </div>
-                    <div class="col-4">
-                        <img src="">
-                        <h3>Snowboard</h3>
-                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>  
+                    <div class="col-md-4">
+                        <a href="#">
+                            <img src="https://i.etsystatic.com/16023313/c/1435/1140/0/18/il/e1f9cb/2888631660/il_340x270.2888631660_dl96.jpg" alt="T-shirt">
+                            <h3>T-shirts</h3>
+                            <p>Proin iaculis</p> 
+                        </a> 
                     </div>
-
                 </div>
-
-
             </div>
         </section>
+
+        <section class="footer">
+            <div class="container">
+                <div clas="row">
+                    <div class="copyright">
+
+
+                    </div>
+                    <p>Copyrigth 2014</p>
+                </div>
+            </div>
+        </section>
+
 
     </body>
 </html>
