--- a/index.html
+++ b/index.html
@@ -114,12 +114,17 @@
 
         <section class="footer">
             <div class="container">
-                <div clas="row">
-                    <div class="copyright">
-
-
+                <div class="row">
+                    <div class="copyright col-md-4">
+                        <p>Copyright 2014</p>
                     </div>
-                    <p>Copyrigth 2014</p>
+                    <div class="social-media col-md-4">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                    <div class="col-md-4">
+                    </div>
                 </div>
             </div>
         </section>
